--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="ama">#FFFBCF32</color>
     <color name="cafe">#624611</color>
 
-    <color name="home">#FFFFC107</color>
+    <color name="home">#2B2104</color>
     <color name="perfil">#FFFFC107</color>
     <color name="menu">#FFFFC107</color>
 
