--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="cafe">#624611</color>
 
     <color name="home">#2B2104</color>
-    <color name="perfil">#FFFFC107</color>
-    <color name="menu">#FFFFC107</color>
+    <color name="perfil">#2B2104</color>
+    <color name="menu">#2B2104</color>
 
     <color name="home_20">#E9FFD863</color>
     <color name="perfil_20">#E9FFD863</color>
