--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,13 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <!-- Dimensiones para las CardViews -->
+    <dimen name="card_height">196dp</dimen>
+    <dimen name="card_cornerRadius">5dp</dimen>
+    <dimen name="card_elevation">8dp</dimen>
+    <dimen name="card_text_padding">10dp</dimen>
+    <dimen name="start_padding">5dp</dimen>
+    <dimen name="end_padding">5dp</dimen>
+
+    <!-- Otras dimensiones -->
+    <dimen name="text_height">12dp</dimen>
 </resources>
