--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
 
     <style name="SplashTheme" parent="Theme.ITOAPP">
         <item name="android:windowBackground">
-            @drawable/rectangol
+            @drawable/pantalla_carga
         </item>
     </style>
     <style name="Redondo">
