--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -74,7 +74,7 @@
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ave"/>
+                android:src="@drawable/ave_sombreado"/>
 
             <TextView
                 android:id="@+id/OptionsText"
@@ -105,7 +105,7 @@
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ave"/>
+                android:src="@drawable/ave_sombreado"/>
 
             <TextView
                 android:id="@+id/ProfilText"
