--- a/app/src/main/res/layout/activity_login_admi.xml
+++ b/app/src/main/res/layout/activity_login_admi.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="32dp"
                 android:layout_marginTop="16dp"
-
+                android:hint="Código de acceso"
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -56,7 +56,6 @@
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:textColor="#000000"
-                    tools:hint="Código de acceso"
                     tools:text=""></com.google.android.material.textfield.TextInputEditText>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -69,7 +68,8 @@
                 android:id="@+id/pwdContainer"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:endIconMode="password_toggle"
-                app:errorEnabled="true">
+                app:errorEnabled="true"
+                android:hint="Contraseña">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editTextPassword"
@@ -77,8 +77,6 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:textColor="#000000"
-                    tools:hint="Contraseña"
-
                     tools:text="Abc_123"></com.google.android.material.textfield.TextInputEditText>
 
             </com.google.android.material.textfield.TextInputLayout>
