--- a/app/src/main/res/layout/activity_crear_publi.xml
+++ b/app/src/main/res/layout/activity_crear_publi.xml
@@ -40,7 +40,7 @@
 
                         <com.google.android.material.imageview.ShapeableImageView
                             android:id="@+id/imageView2"
-                            android:layout_width="128dp"
+                            android:layout_width="155dp"
                             android:layout_height="80dp"
                             android:layout_weight="1"
                             android:adjustViewBounds="true"
@@ -81,32 +81,42 @@
 
                     </LinearLayout>
 
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="15dp" />
+
+                    <Spinner
+                        android:id="@+id/lista"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:textColor="#3F5185"
+                        android:textSize="30sp" />
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/numContainer"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="¿Qué estas pensando?"
-                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginHorizontal="5dp"
                         android:layout_marginTop="16dp"
+                        android:hint="¿Qué estas pensando?"
                         app:errorEnabled="true">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/editTextTexto"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="text"
+                            android:inputType="textMultiLine"
+                            android:singleLine="false"
                             android:textColor="#000000"
                             tools:text=""></com.google.android.material.textfield.TextInputEditText>
-
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/text_view"
+
+                    <Space
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:visibility="gone" />
+                        android:layout_height="15dp" />
+
                     <LinearLayout
                         android:id="@+id/buttons_layout"
                         android:layout_width="match_parent"
@@ -118,39 +128,55 @@
                             android:id="@+id/buttonSelectImage"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:backgroundTint="@color/ama"
+                            android:elevation="2dp"
                             android:onClick="onClick"
                             android:text="Agregar imagen"
                             android:textAlignment="center"
-                            android:textSize="10sp"
-                            android:layout_gravity="center"
-                            android:textStyle="bold" />
+                            android:textColor="@color/cafe"
+                            android:textSize="13sp"
+                            android:textStyle="italic" />
 
                         <Button
                             android:id="@+id/publicar"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:backgroundTint="@color/ama"
+                            android:elevation="2dp"
+                            android:onClick="publicar"
                             android:text="Publicar"
                             android:textAlignment="center"
-                            android:textSize="12sp"
-                            android:layout_gravity="center"
-                            android:textStyle="bold"
-                            android:onClick="publicar"/>
+                            android:textColor="@color/cafe"
+                            android:textSize="13sp"
+                            android:textStyle="italic" />
 
                         <Button
                             android:id="@+id/cancel_button"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_weight="1"
+                            android:backgroundTint="@color/ama"
+                            android:elevation="2dp"
                             android:text="Cancelar"
                             android:textAlignment="center"
-                            android:layout_gravity="center"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
+                            android:textColor="@color/cafe"
+                            android:textSize="13sp"
+                            android:textStyle="italic" />
 
 
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/text_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:visibility="gone" />
 
                     <ImageView
                         android:id="@+id/imagenPubli"
@@ -158,7 +184,6 @@
                         android:layout_height="match_parent"
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside" />
-
 
 
                 </LinearLayout>
