--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/HomeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Home"
+                android:text="Inicio"
                 android:textStyle="bold"
                 android:textColor="@color/home"
                 android:layout_marginStart="10dp"
@@ -81,7 +81,7 @@
                 android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Options"
+                android:text="Opciones"
                 android:textStyle="bold"
                 android:textColor="@color/menu"
                 android:layout_marginStart="10dp"
@@ -112,7 +112,7 @@
                 android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Profil"
+                android:text="Perfil"
                 android:textStyle="bold"
                 android:textColor="@color/perfil"
                 android:layout_marginStart="10dp"
