--- a/app/src/main/res/layout/fragment__optiones.xml
+++ b/app/src/main/res/layout/fragment__optiones.xml
@@ -71,6 +71,7 @@
                     app:cardElevation="6dp">
 
                     <LinearLayout
+                        android:id="@+id/Opcion_CLE"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
